--- a/rpi-disable-wifi-powersave.service
+++ b/rpi-disable-wifi-powersave.service
@@ -1,3 +1,5 @@
+# systemd service for disabling the WiFi power save on a Raspberry Pi
+
 [Unit]
 Description=Set WiFi power save off
 After=sys-subsystem-net-devices-wlan0.device
