Added path example to rpi-disable-wifi-powersave.service

--- a/rpi-disable-wifi-powersave.service
+++ b/rpi-disable-wifi-powersave.service
@@ -1,4 +1,5 @@
 # systemd service for disabling the WiFi power save on a Raspberry Pi
+# /etc/systemd/system/rpi-disable-wifi-powersave.service
 
 [Unit]
 Description=Set WiFi power save off
